# di-flask

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: build_and_publish.yml
src/flask_di/: __init__.py  core.py  dependency.py
tests/: test_basic.py
