[project]
name = "flask-di"
version = "0.1.1"
description = "FastAPI-style dependency injection for Flask using Annotated and Python 3.12 features."
authors = [{ name = "razorblade23", email = "contact@razorblade23.dev" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
keywords = ["flask", "dependency-injection", "fastapi", "annotated", "di"]

dependencies = [
    "flask>=2.3"
]

[project.urls]
Homepage = "https://github.com/razorblade23/flask-di"
Issues = "https://github.com/razorblade23/flask-di/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flask_di"]

[dependency-groups]
dev = [
    "hatchling>=1.28.0",
    "pytest>=9.0.1",
]
